api-python/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-python
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-python
  template:
    metadata:
      labels:
        app: api-python
    spec:
      containers:
        - name: api-python
          image: api-python:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
