api-python/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-python
spec:
  selector:
    app: api-python
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
